<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/multiplication_button"
                style="@style/OperationButtonStyle"
                android:text="@string/multiplication_button" />

            <Button
                android:id="@+id/division_button"
                style="@style/OperationButtonStyle"
                android:text="@string/division_button" />

            <Button
                android:id="@+id/minus_button"
                style="@style/OperationButtonStyle"
                android:text="@string/minus_button" />

            <Button
                android:id="@+id/plus_button"
                style="@style/OperationButtonStyle"
                android:text="@string/plus_button" />

            <Button
                android:id="@+id/open_parenthesis_button"
                style="@style/OperationButtonStyle"
                android:text="@string/open_parenthesis_button" />

            <Button
                android:id="@+id/close_parenthesis_button"
                style="@style/OperationButtonStyle"
                android:text="@string/close_parenthesis_button" />

            <Button
                android:id="@+id/dot_button"
                style="@style/OperationButtonStyle"
                android:text="@string/dot_button" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/expression_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:hint="@string/expression_edit_text_hint"
        android:inputType="text"
        android:digits="@string/expression_edit_text_digits"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/evaluate_expression_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evaluate_button"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/answer_pointer_text_view" />

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="239" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>